<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Schülerkalender</string>
    <string name="banner_ad_unit_id">a151b0535cc49ba</string>
    <string name="icon_text">Schülerkalender</string>
    <string name="db_version">1</string>
    <string name="error_file_read">Fehler beim Lesen der Datei %1$s.</string>
    <string name="error_file_open">Datei %1$s konnte nicht geöffnet werden.</string>
    <string name="button_createDB">Datenbank erstellen</string>
    <string name="button_createCal">Kalender erstellen</string>
    <string name="button_ok">Übernehmen</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_teacher_add">Lehrer hinzufügen</string>
    <string name="button_faecher_add">Fach hinzufügen</string>
    <string name="button_close">Schließen</string>
    <string name="button_back">Zurück</string>
    <string name="button_no_teacher">Keinen Lehrer zuordnen</string>
    <string name="button_eintragen">Eintragen</string>
    <string name="button_anzeigen">Anzeigen</string>
    <string name="button_delete_bd">Datenbank löschen</string>
    <string name="tv_empty">     </string>
    <string name="tv_undefined">\?\?</string>
    <string name="tv_cal_create">Erstelle Kalender&#8230;</string>
    <string name="tv_bemerkungen">Bemerkungen:</string>
    <string name="tv_beschreibung">Beschreibung:</string>
    <string name="tv_aufgaben">Aufgaben:</string>
    <string name="tv_teacher_list">Lehrer-Übersicht</string>
    <string name="tv_teacher_add">Lehrer(in) hinzufügen</string>
    <string name="tv_teacher_edit">Lehrerdaten bearbeiten</string>
    <string name="tv_teacher_anrede">Anrede:</string>
    <string name="tv_teacher_vorname">Vorname:</string>
    <string name="tv_teacher_name">Name:</string>
    <string name="tv_teacher_kuerzel">Lehrerkürzel:</string>
    <string name="tv_teacher_telefon">Telefon:</string>
    <string name="tv_teacher_email">E-Mail:</string>
    <string name="tv_faecher_list">Fächer-Übersicht</string>
    <string name="tv_faecher_noteacher">(noch kein Lehrer zugeordnet)</string>
    <string name="tv_faecher_add">Fach hinzufügen</string>
    <string name="tv_faecher_edit">Fach bearbeiten</string>
    <string name="tv_faecher_fach">Fach:</string>
    <string name="tv_faecher_kurzcode">Fach-Kürzel:</string>
    <string name="tv_faecher_teacher">Lehrer:</string>
    <string name="tv_test_add">Test/Klausur/Prüfung eintragen</string>
    <string name="tv_tests_list">Tests, Klausuren, Prüfungen&#8230;</string>
    <string name="tv_tests">Tests/Klausuren/Prüfungen</string>
    <string name="tv_test_am">Termin:</string>
    <string name="tv_test_art">Art:</string>
    <string name="tv_test_note">Note:</string>
    <string name="tv_test_durchschnitt">Durchschnitt:</string>
    <string name="tv_plan">Stundenplan</string>
    <string name="tv_plan_edit">Stundenplan anpassen</string>
    <string name="tv_plan_beginn">Beginn:</string>
    <string name="tv_plan_ende">Ende:</string>
    <string name="tv_hausaufgaben">Hausaufgaben</string>
    <string name="tv_notizen">Notizen</string>
    <string name="tv_time_dummy_von">07:45</string>
    <string name="tv_time_dummy_bis">08:30</string>
    <string name="tv_raum">Raum:</string>
    <string name="tv_schulstunde">Schulstunde</string>
    <string name="tv_wochenende">Wochenende</string>
    <string name="tv_ferien">Ferien</string>
    <string name="tv_feiertag">Feiertag</string>
    <string name="tv_woche">Woche</string>
    <string name="tv_vom">vom</string>
    <string name="tv_bis">bis</string>
    <string name="tv_frei">frei</string>
    <string name="tv_monatsansicht">Monatsübersicht</string>
    <string name="tv_hausi_add">Hausaufgaben eintragen</string>
    <string name="tv_hausi_edit">Hausaufgaben bearbeiten</string>
    <string name="tv_hausi_erl_am">Erledigen am:</string>
    <string name="tv_hausi_abgabe_am">Abzugeben am:</string>
    <string name="tv_hausi_ab_am">Abgeben am:</string>
    <string name="tv_abgeben">abgeben</string>
    <string name="tv_erledigen">erledigen</string>
    <string name="tv_erledigt">erledigt</string>
    <string name="tv_nicht_erledigt">noch nicht erledigt</string>
    <string name="tv_notes_add">Notiz hinzufügen</string>
    <string name="tv_datum">Datum:</string>
    <string name="tv_notiz">Notiz:</string>
    <string name="tv_db_delete_info">Achtung,\nbeim Löschen der Datenbank gehen ALLE erfassten Daten verloren! Sie können diese Funktion z.B. verwenden, um die Datenbank für ein anderes Bundesland neu zu initialisieren.</string>
    <string name="opt_teacher_herr">Herr</string>
    <string name="opt_teacher_frau">Frau</string>
    <string name="table_kalender">kalender</string>
    <string name="table_faecher">faecher</string>
    <string name="table_fachkurzcode">fachkurzcode</string>
    <string name="table_hausaufgaben">hausaufgaben</string>
    <string name="table_lehrer">lehrer</string>
    <string name="table_stundenplan">stundenplan</string>
    <string name="table_tests">tests</string>
    <string name="table_feiertage">feiertage</string>
    <string name="table_testarten">testarten</string>
    <string name="table_notizen">notizen</string>
    <string name="field_id">_id</string>
    <string name="field_datum_sort">datum_sort</string>
    <string name="field_datum_show">datum_show</string>
    <string name="field_wochentag">wochentag</string>
    <string name="field_kw">kw</string>
    <string name="field_feiertag">feiertag</string>
    <string name="field_ferientag">ferientag</string>
    <string name="field_bezeichnung">bezeichnung</string>
    <string name="field_anrede">anrede</string>
    <string name="field_vorname">vorname</string>
    <string name="field_nachname">nachname</string>
    <string name="field_kuerzel">kuerzel</string>
    <string name="field_telefon">telefon</string>
    <string name="field_email">email</string>
    <string name="field_bemerkung">bemerkung</string>
    <string name="field_fach">fach</string>
    <string name="field_kurzcode">kurzcode</string>
    <string name="field_teacher">lehrer</string>
    <string name="field_tag">tag</string>
    <string name="field_stunde">stunde</string>
    <string name="field_beginn">uhrzeit_ab</string>
    <string name="field_ende">uhrzeit_bis</string>
    <string name="field_raum">raum</string>
    <string name="field_erledigen_am">erledigen_am</string>
    <string name="field_abgabe_am">abzugeben_am</string>
    <string name="field_aufgaben">beschreibung</string>
    <string name="field_erledigt">erledigt</string>
    <string name="field_kalendertag">kalendertag</string>
    <string name="field_art">art</string>
    <string name="field_note">note</string>
    <string name="field_durchschnitt">durchschnitt</string>
    <string name="field_testart">testart</string>
    <string name="field_notiz">notiz</string>
    <string name="day_montag">Montag</string>
    <string name="day_dienstag">Dienstag</string>
    <string name="day_mittwoch">Mittwoch</string>
    <string name="day_donnerstag">Donnerstag</string>
    <string name="day_freitag">Freitag</string>
    <string name="day_samstag">Samstag</string>
    <string name="day_sonntag">Sonntag</string>
    <string name="day_mo">Mo</string>
    <string name="day_di">Di</string>
    <string name="day_mi">Mi</string>
    <string name="day_do">Do</string>
    <string name="day_fr">Fr</string>
    <string name="day_sa">Sa</string>
    <string name="day_so">So</string>
    <string name="menuItem_Calendar">Kalender</string>
    <string name="menuItem_Homework">Hausaufgaben eintragen</string>
    <string name="menuItem_Notes">Notiz eintragen</string>
    <string name="menuItem_Tests">Tests, Klausuren und Prüfungen eintragen</string>
    <string name="menuItem_Faecher">Fächer</string>
    <string name="menuItem_Teacher">Lehrer</string>
    <string name="menuItem_Exit">Beenden</string>
    <string name="msg_title_finish">Schülerkalender beenden?</string>
    <string name="msg_title_teacher_delete">Lehrerdaten löschen?</string>
    <string name="msg_title_fach_delete">Fach löschen?</string>
    <string name="msg_title_hour_delete">Auf \'Kein Unterricht\' zurücksetzen?</string>
    <string name="msg_title_hw_delete">Hausaufgabe löschen?</string>
    <string name="msg_title_delete">löschen?</string>
    <string name="msg_title_note_delete">Notiz löschen?</string>
    <string name="msg_areyousure">Sind Sie sicher?</string>
    <string name="msg_yes">Ja</string>
    <string name="msg_no">Nein</string>
	<string name="cd_teacher_info">Info\'s zum Lehrer/zur Lehrerin</string>
	<string name="cd_teacher_edit">Lehrer-Daten bearbeiten</string>
	<string name="cd_teacher_delete">Lehrerdaten löschen</string>
	<string name="cd_teacher_search">Fachlehrer zuordnen</string>
	<string name="cd_faecher_search">Fachauswahl</string>
	<string name="cd_homework_edit">Hausaufgabe bearbeiten</string>
	<string name="cd_homework_delete">Hausaufgabe löschen</string>
	<string name="cd_fach_info">Info\'s zum Fach</string>
	<string name="cd_menu_notes">Notizen</string>
	<string name="cd_menu_ha">Hausaufgaben</string>
	<string name="cd_navi_home">Heute</string>
	<string name="cd_navi_back">zurück</string>
	<string name="cd_navi_next">vor</string>
	<string name="cd_testart_search">Art-Auswahl</string>
	<string name="cd_test_edit">bearbeiten</string>
	<string name="cd_test_delete">löschen</string>
	<string name="cd_note_edit">Notiz bearbeiten</string>
	<string name="cd_note_delete">Notiz löschen</string>
	<string name="tab_calendar_day">Tag</string>
	<string name="tab_calendar_week">Woche</string>
	<string name="tab_calendar_month">Monat</string>
	<string name="hint_fach_search">Fach suchen -></string>
	<string name="menu_main_settings">Einstellungen</string>
	<string name="menu_main_db">Datenbank</string>
	<string name="menu_home_home">Hauptmenü</string>
											
</resources>