<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="4dip"
    android:paddingTop="4dip" >

    <TextView
        android:id="@+id/tv_faecher_list_fach"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="4dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_toLeftOf="@+id/button_edit_fach"
        android:shadowColor="@color/col_blue"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="TextView"
        android:textColor="@color/col_black"
        android:textSize="16dip" />

    <ImageButton
        android:id="@+id/button_delete_fach"
        style="@style/DeleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_delete_teacher"
        android:layout_marginRight="10dip"
        android:contentDescription="@string/cd_teacher_delete" />
    
    <ImageButton
        android:id="@+id/button_info_fach"
        style="@style/InfoButton"
		android:contentDescription="@string/cd_fach_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dip"
        android:layout_below="@+id/tv_faecher_list_fach" />
    
    <ImageButton
        android:id="@+id/button_edit_fach"
        style="@style/EditFachButton"
		android:contentDescription="@string/cd_teacher_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tv_faecher_list_fach" />

    <TextView
        android:id="@+id/tv_faecher_list_teacher"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_faecher_list_fach"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:layout_marginTop="8dip"
        android:layout_toLeftOf="@+id/button_edit_fach"
        android:layout_toRightOf="@+id/button_info_fach"
        android:shadowColor="@color/col_blue"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="1.5"
        android:text="@string/tv_faecher_noteacher"
        android:textColor="@color/col_black"
        android:textSize="14dip" />

    </RelativeLayout>